added clean references

--- a/clean_references.bib
+++ b/clean_references.bib
@@ -100,3 +100,16 @@
  url = {https://openaccess.thecvf.com/content/CVPR2024/html/Liang_CapHuman_Capture_Your_Moments_in_Parallel_Universes_CVPR_2024_paper.html},
  year = {2024}
 }
+
+@inproceedings{li2024gradual,
+ abstract = {GAN-based image attribute editing firstly leverages GAN Inversion to project real images into the latent space of GAN and then manipulates corresponding latent codes. Recent inversion methods mainly utilize additional high-bit features to improve image details preservation, as low-bit codes cannot faithfully reconstruct source images, leading to the loss of details. However, during editing, existing works fail to accurately complement the lost details and suffer from poor editability. The main reason is they inject all the lost details},
+ author = {Hao Li and Mengqi Huang and Lei Zhang and Bo Hu and Yi Liu and Zhendong Mao},
+ booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+ doi = {10.1609/aaai.v38i4.28089},
+ number = {4},
+ pages = {3064--3072},
+ title = {Gradual Residuals Alignment: A Dual-Stream Framework for GAN Inversion and Image Attribute Editing},
+ url = {https://ojs.aaai.org/index.php/AAAI/article/view/28089},
+ volume = {38},
+ year = {2024}
+}
