--- a/clean_references.bib
+++ b/clean_references.bib
@@ -113,3 +113,12 @@
  volume = {38},
  year = {2024}
 }
+
+@inproceedings{zhang2023magicbrush,
+ abstract = {Text-guided image editing is widely needed in daily life, ranging from personal use to professional applications such as Photoshop. However, existing methods are either zero-shot or trained on an automatically synthesized dataset, which contains a high volume of noise. Thus, they still require lots of manual tuning to produce desirable outcomes in practice. To address this issue, we introduce MagicBrush, the first large-scale, manually annotated dataset for instruction-guided real image editing that covers diverse scenarios},
+ author = {Kai Zhang and Lingbo Mo and Wenhu Chen and Huan Sun and Yu Su},
+ booktitle = {Advances in Neural Information Processing Systems},
+ title = {MagicBrush: A Manually Annotated Dataset for Instruction-Guided Image Editing},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2023/hash/64008fa30cba9b4d1ab1bd3bd3d57d61-Abstract-Datasets_and_Benchmarks.html},
+ year = {2023}
+}
