added clean references

--- a/clean_references.bib
+++ b/clean_references.bib
@@ -122,3 +122,66 @@
  url = {https://proceedings.neurips.cc/paper_files/paper/2023/hash/64008fa30cba9b4d1ab1bd3bd3d57d61-Abstract-Datasets_and_Benchmarks.html},
  year = {2023}
 }
+
+@inproceedings{chen2024dreamidentity,
+ abstract = {While large-scale pre-trained text-to-image models can synthesize diverse and high-quality human-centric images, an intractable problem is how to preserve the face identity for conditioned face images. Existing methods either require time-consuming optimization for each face-identity or learning an efficient encoder at the cost of harming the editability of models. In this work, we present an optimization-free method for each face identity, meanwhile keeping the editability for text-to-image models. Specifically, we propose a novel},
+ author = {Chen, Zhuowei and Fang, Shancheng and Liu, Wei and He, Qian and Huang, Mengqi and Zhang, Yongdong and Mao, Zhendong},
+ booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+ doi = {10.1609/aaai.v38i2.27891},
+ number = {2},
+ pages = {1281--1289},
+ title = {DreamIdentity: Improved Editability for Efficient Face-Identity Preserved Image Generation},
+ url = {https://ojs.aaai.org/index.php/AAAI/article/view/27891},
+ volume = {38},
+ year = {2024}
+}
+
+@inproceedings{shi2024instantbooth,
+ abstract = {Recent advances in personalized image generation have enabled pre-trained text-to-image models to learn new concepts from specific image sets. However these methods often necessitate extensive test-time finetuning for each new concept leading to inefficiencies in both time and scalability. To address this challenge we introduce InstantBooth an innovative approach leveraging existing text-to-image models for instantaneous text-guided image personalization eliminating the need for test-time finetuning. This efficiency is achieved},
+ author = {Shi, Jing and Xiong, Wei and Lin, Zhe and Jung, Hyun Joon},
+ booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+ doi = {10.1109/CVPR2024.00854},
+ pages = {8543--8552},
+ title = {InstantBooth: Personalized Text-to-Image Generation without Test-Time Finetuning},
+ url = {https://openaccess.thecvf.com/content/CVPR2024/html/Shi_InstantBooth_Personalized_Text-to-Image_Generation_without_Test-Time_Finetuning_CVPR_2024_paper.html},
+ year = {2024}
+}
+
+@misc{brooks2023instructpix2pixlearningfollowimage,
+ abstract = {We propose a method for editing images from human instructions: given an input image and a written instruction that tells the model what to do, our model follows these instructions to edit the image. To obtain training data for this problem, we combine the knowledge of two large pretrained models--a language model (GPT-3) and a text-to-image model (Stable Diffusion)--to generate a large dataset of image editing examples. Our conditional diffusion model, InstructPix2Pix, is trained on our generated data, and generalizes to real images and},
+ archiveprefix = {arXiv},
+ author = {Tim Brooks and Aleksander Holynski and Alexei A. Efros},
+ booktitle = {Proceedings of the IEEE …},
+ eprint = {2211.09800},
+ primaryclass = {cs.CV},
+ title = {InstructPix2Pix: Learning to Follow Image Editing Instructions},
+ url = {https://arxiv.org/abs/2211.09800},
+ year = {2023}
+}
+
+@article{jiang2023object,
+ abstract = {a new object-centric learning model, Latent Slot Diffusion (LSD).  Latent Slot Diffusion or  LSD is a novel object-centric learning  Like conventional object-centric learning approaches, it},
+ author = {Jiang, Jindong and Singh, Krishnakant and Schaub-Meyer, Simone and Roth, Stefan},
+ journal = {arXiv preprint arXiv:2303.10834},
+ title = {Object-Centric Slot Diffusion},
+ url = {https://arxiv.org/abs/2303.10834},
+ year = {2023}
+}
+
+@article{yu2024representation,
+ abstract = {Recent studies have shown that the denoising process in (generative) diffusion models can induce meaningful (discriminative) representations inside the model, though the quality of these representations still lags behind those learned through recent self-supervised learning methods. We argue that one main bottleneck in training large-scale diffusion models for generation lies in effectively learning these representations. Moreover, training can be made easier by incorporating high-quality external visual representations, rather than relying},
+ author = {Yu, Sihyun and Kwak, Sangkyung and Jang, Huiwon and Jeong, Jongheon and Huang, Jonathan and Shin, Jinwoo and Xie, Saining},
+ journal = {arXiv preprint arXiv:2410.06940},
+ title = {Representation alignment for generation: Training diffusion transformers is easier than you think},
+ year = {2024}
+}
+
+@article{karras2022elucidating,
+ abstract = {We argue that the theory and practice of diffusion-based generative models are currently unnecessarily convoluted and seek to remedy the situation by presenting a design space that clearly separates the concrete design choices. This lets us identify several changes to both the sampling and training processes, as well as preconditioning of the score networks. Together, our improvements yield new state-of-the-art FID of 1.79 for CIFAR-10 in a class-conditional setting and 1.97 in an unconditional setting, with much faster sampling (35},
+ author = {Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
+ journal = {Advances in neural information processing systems},
+ pages = {26565--26577},
+ title = {Elucidating the design space of diffusion-based generative models},
+ volume = {35},
+ year = {2022}
+}
