how many versions

--- a/old_references.bib
+++ b/old_references.bib
@@ -53,12 +53,12 @@
 @string(CVPRW= {CVPRW})
 @string(CSVT = {IEEE TCSVT})
 @inproceedings{sohl2015deep,
-	title        = {Deep unsupervised learning using nonequilibrium thermodynamics},
-	author       = {Sohl-Dickstein, Jascha and Weiss, Eric and Maheswaranathan, Niru and Ganguli, Surya},
-	year         = 2015,
-	booktitle    = {International conference on machine learning},
-	pages        = {2256--2265},
-	organization = {PMLR}
+  title={Deep unsupervised learning using nonequilibrium thermodynamics},
+  author={Sohl-Dickstein, Jascha and Weiss, Eric and Maheswaranathan, Niru and Ganguli, Surya},
+  booktitle={International conference on machine learning},
+  pages={2256--2265},
+  year={2015},
+  organization={PMLR}
 }
 @inproceedings{poole2023dreamfusion,
 	title        = {DreamFusion: Text-to-3D using 2D Diffusion},
@@ -173,14 +173,14 @@
 	doi          = {10.1109/CVPR2024.00854},
 	url          = {https://openaccess.thecvf.com/content/CVPR2024/html/Shi_InstantBooth_Personalized_Text-to-Image_Generation_without_Test-Time_Finetuning_CVPR_2024_paper.html}
 }
-@misc{brooks2023instructpix2pix,
-	title        = {InstructPix2Pix: Learning to Follow Image Editing Instructions},
-	author       = {Tim Brooks and Aleksander Holynski and Alexei A. Efros},
-	year         = 2023,
-	url          = {https://arxiv.org/abs/2211.09800},
-	eprint       = {2211.09800},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.CV}
+@misc{brooks2023instructpix2pixlearningfollowimage,
+      title={InstructPix2Pix: Learning to Follow Image Editing Instructions}, 
+      author={Tim Brooks and Aleksander Holynski and Alexei A. Efros},
+      year={2023},
+      eprint={2211.09800},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2211.09800}, 
 }
 @article{jiang2023object,
 	title        = {Object-Centric Slot Diffusion},
@@ -190,18 +190,18 @@
 	url          = {https://arxiv.org/abs/2303.10834}
 }
 @article{yu2024representation,
-	title        = {Representation alignment for generation: Training diffusion transformers is easier than you think},
-	author       = {Yu, Sihyun and Kwak, Sangkyung and Jang, Huiwon and Jeong, Jongheon and Huang, Jonathan and Shin, Jinwoo and Xie, Saining},
-	year         = 2024,
-	journal      = {arXiv preprint arXiv:2410.06940}
+  title={Representation alignment for generation: Training diffusion transformers is easier than you think},
+  author={Yu, Sihyun and Kwak, Sangkyung and Jang, Huiwon and Jeong, Jongheon and Huang, Jonathan and Shin, Jinwoo and Xie, Saining},
+  journal={arXiv preprint arXiv:2410.06940},
+  year={2024}
 }
 @article{karras2022elucidating,
-	title        = {Elucidating the design space of diffusion-based generative models},
-	author       = {Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
-	year         = 2022,
-	journal      = {Advances in neural information processing systems},
-	volume       = 35,
-	pages        = {26565--26577}
+  title={Elucidating the design space of diffusion-based generative models},
+  author={Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
+  journal={Advances in neural information processing systems},
+  volume={35},
+  pages={26565--26577},
+  year={2022}
 }
 @article{zhang2024flashface,
 	title        = {FlashFace: Human Image Personalization with High-Fidelity Identity Preservation},
@@ -218,36 +218,40 @@
 	url          = {https://arxiv.org/abs/2404.15449}
 }
 @article{wang2024patch,
-	title        = {Patch diffusion: Faster and more data-efficient training of diffusion models},
-	author       = {Wang, Zhendong and Jiang, Yifan and Zheng, Huangjie and Wang, Peihao and He, Pengcheng and Wang, Zhangyang and Chen, Weizhu and Zhou, Mingyuan and others},
-	year         = 2024,
-	journal      = {Advances in neural information processing systems},
-	volume       = 36
+  title={Patch diffusion: Faster and more data-efficient training of diffusion models},
+  author={Wang, Zhendong and Jiang, Yifan and Zheng, Huangjie and Wang, Peihao and He, Pengcheng and Wang, Zhangyang and Chen, Weizhu and Zhou, Mingyuan and others},
+  journal={Advances in neural information processing systems},
+  volume={36},
+  year={2024}
 }
 @article{xiao2024omnigen,
-	title        = {Omnigen: Unified image generation},
-	author       = {Xiao, Shitao and Wang, Yueze and Zhou, Junjie and Yuan, Huaying and Xing, Xingrun and Yan, Ruiran and Wang, Shuting and Huang, Tiejun and Liu, Zheng},
-	year         = 2024,
-	journal      = {arXiv preprint arXiv:2409.11340}
+  title={Omnigen: Unified image generation},
+  author={Xiao, Shitao and Wang, Yueze and Zhou, Junjie and Yuan, Huaying and Xing, Xingrun and Yan, Ruiran and Wang, Shuting and Huang, Tiejun and Liu, Zheng},
+  journal={arXiv preprint arXiv:2409.11340},
+  year={2024}
 }
 @inproceedings{shagidanov2024grounded,
-	title        = {Grounded-Instruct-Pix2Pix: Improving Instruction Based Image Editing with Automatic Target Grounding},
-	author       = {Shagidanov, Artur and Poghosyan, Hayk and Gong, Xinyu and Wang, Zhangyang and Navasardyan, Shant and Shi, Humphrey},
-	year         = 2024,
-	booktitle    = {ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-	pages        = {6585--6589},
-	organization = {IEEE}
+  title={Grounded-Instruct-Pix2Pix: Improving Instruction Based Image Editing with Automatic Target Grounding},
+  author={Shagidanov, Artur and Poghosyan, Hayk and Gong, Xinyu and Wang, Zhangyang and Navasardyan, Shant and Shi, Humphrey},
+  booktitle={ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={6585--6589},
+  year={2024},
+  organization={IEEE}
 }
-@misc{wu2023slotdiffusion,
-      title={SlotDiffusion: Object-Centric Generative Modeling with Diffusion Models}, 
-      author={Ziyi Wu and Jingyu Hu and Wuyue Lu and Igor Gilitschenski and Animesh Garg},
-      year={2023},
-      eprint={2305.11281},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2305.11281}, 
+@inproceedings{brooks2023instructpix2pix,
+  title={Instructpix2pix: Learning to follow image editing instructions},
+  author={Brooks, Tim and Holynski, Aleksander and Efros, Alexei A},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={18392--18402},
+  year={2023}
 }
-
+@inproceedings{wu2023slotdiffusion,
+	title        = {SlotDiffusion: Object-Centric Generative Modeling with Slot Attention and Diffusion Models},
+	author       = {Wu, Jie and Kuang, Huan and Zhang, Haobo and Ren, Yatao and Chen, Weifeng and Zhang, Ming and Xiao, Xuefeng and Li, Guangming},
+	year         = 2023,
+	booktitle    = {Proceedings of the 37th Conference on Neural Information Processing Systems (NeurIPS)},
+	url          = {https://arxiv.org/abs/2305.13840}
+}
 @article{guo2023animatediff,
 	title        = {AnimateDiff: Animate Your Personalized Text-to-Image Diffusion Models without Specific Tuning},
 	author       = {Guo, Yujun and Zhang, Ziyu and Zhang, Jianmin and Chen, Dong and Yuan, Lu and Wen, Fang},
@@ -255,14 +259,19 @@
 	journal      = {arXiv preprint arXiv:2307.04725},
 	url          = {https://arxiv.org/abs/2307.04725}
 }
-@misc{wang2024instantid,
-      title={InstantID: Zero-shot Identity-Preserving Generation in Seconds}, 
-      author={Qixun Wang and Xu Bai and Haofan Wang and Zekui Qin and Anthony Chen and Huaxia Li and Xu Tang and Yao Hu},
-      year={2024},
-      eprint={2401.07519},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2401.07519}, 
+@article{wang2024instantid,
+	title        = {InstantID: Fast Personalization of Text-to-Image Diffusion Models},
+	author       = {Wang, Yifan and Zhang, Ziyu and Zhang, Jianmin and Chen, Dong and Yuan, Lu and Wen, Fang},
+	year         = 2024,
+	journal      = {arXiv preprint arXiv:2312.06354},
+	url          = {https://arxiv.org/abs/2312.06354}
+}
+@article{meng2021sdedit,
+	title        = {SDEdit: Image Synthesis and Editing with Stochastic Differential Equations},
+	author       = {Meng, Chenlin and Song, Yang and Song, Jiaming and Wu, Jiajun and Zhu, Jun-Yan and Ermon, Stefano},
+	year         = 2021,
+	journal      = {arXiv preprint arXiv:2108.01073},
+	url          = {https://arxiv.org/abs/2108.01073}
 }
 @article{huang2023arc2face,
 	title        = {Arc2Face: A Foundation Model of Human Faces},
@@ -319,16 +328,25 @@
 	url          = {https://arxiv.org/abs/2304.07193}
 }
 @article{touvron2023llama,
-	title        = {Llama: Open and efficient foundation language models},
-	author       = {Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timoth{\'e}e and Rozi{\`e}re, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
-	year         = 2023,
-	journal      = {arXiv preprint arXiv:2302.13971}
+  title={Llama: Open and efficient foundation language models},
+  author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timoth{\'e}e and Rozi{\`e}re, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
+  journal={arXiv preprint arXiv:2302.13971},
+  year={2023}
 }
 @unpublished{spacy2,
-	title        = {{spaCy 2}: Natural language understanding with {B}loom embeddings, convolutional neural networks and incremental parsing},
-	author       = {Honnibal, Matthew and Montani, Ines},
-	year         = 2017,
-	note         = {To appear}
+    AUTHOR = {Honnibal, Matthew and Montani, Ines},
+    TITLE  = {{spaCy 2}: Natural language understanding with {B}loom embeddings, convolutional neural networks and incremental parsing},
+    YEAR   = {2017},
+    Note   = {To appear}
+}
+@misc{liu2023compositionalvisualgenerationcomposable,
+      title={Compositional Visual Generation with Composable Diffusion Models}, 
+      author={Nan Liu and Shuang Li and Yilun Du and Antonio Torralba and Joshua B. Tenenbaum},
+      year={2023},
+      eprint={2206.01714},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2206.01714}, 
 }
 @article{dhariwal2021diffusion,
 	title        = {Diffusion Models Beat GANs on Image Synthesis},
@@ -338,17 +356,17 @@
 	url          = {https://arxiv.org/abs/2105.05233}
 }
 @article{kay2017kinetics,
-	title        = {The kinetics human action video dataset},
-	author       = {Kay, Will and Carreira, Joao and Simonyan, Karen and Zhang, Brian and Hillier, Chloe and Vijayanarasimhan, Sudheendra and Viola, Fabio and Green, Tim and Back, Trevor and Natsev, Paul and others},
-	year         = 2017,
-	journal      = {arXiv preprint arXiv:1705.06950}
+  title={The kinetics human action video dataset},
+  author={Kay, Will and Carreira, Joao and Simonyan, Karen and Zhang, Brian and Hillier, Chloe and Vijayanarasimhan, Sudheendra and Viola, Fabio and Green, Tim and Back, Trevor and Natsev, Paul and others},
+  journal={arXiv preprint arXiv:1705.06950},
+  year={2017}
 }
 @inproceedings{tang2019coin,
-	title        = {Coin: A large-scale dataset for comprehensive instructional video analysis},
-	author       = {Tang, Yansong and Ding, Dajun and Rao, Yongming and Zheng, Yu and Zhang, Danyang and Zhao, Lili and Lu, Jiwen and Zhou, Jie},
-	year         = 2019,
-	booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-	pages        = {1207--1216}
+  title={Coin: A large-scale dataset for comprehensive instructional video analysis},
+  author={Tang, Yansong and Ding, Dajun and Rao, Yongming and Zheng, Yu and Zhang, Danyang and Zhao, Lili and Lu, Jiwen and Zhou, Jie},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={1207--1216},
+  year={2019}
 }
 @article{ramesh2021zero,
 	title        = {Zero-Shot Text-to-Image Generation},
@@ -356,58 +374,58 @@
 	year         = 2021,
 	journal      = {arXiv preprint arXiv:2102.12092}
 }
-@inproceedings{Soucek_2022_CVPR,
-	title        = {Look for the Change: Learning Object States and State-Modifying Actions From Untrimmed Web Videos},
-	author       = {Sou\v{c}ek, Tom\'a\v{s} and Alayrac, Jean-Baptiste and Miech, Antoine and Laptev, Ivan and Sivic, Josef},
-	year         = 2022,
-	month        = {June},
-	booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages        = {13956--13966}
+@InProceedings{Soucek_2022_CVPR,
+    author    = {Sou\v{c}ek, Tom\'a\v{s} and Alayrac, Jean-Baptiste and Miech, Antoine and Laptev, Ivan and Sivic, Josef},
+    title     = {Look for the Change: Learning Object States and State-Modifying Actions From Untrimmed Web Videos},
+    booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month     = {June},
+    year      = {2022},
+    pages     = {13956-13966}
 }
 @article{jaegle2021perceiver,
-	title        = {Perceiver io: A general architecture for structured inputs \& outputs},
-	author       = {Jaegle, Andrew and Borgeaud, Sebastian and Alayrac, Jean-Baptiste and Doersch, Carl and Ionescu, Catalin and Ding, David and Koppula, Skanda and Zoran, Daniel and Brock, Andrew and Shelhamer, Evan and others},
-	year         = 2021,
-	journal      = {arXiv preprint arXiv:2107.14795}
+  title={Perceiver io: A general architecture for structured inputs \& outputs},
+  author={Jaegle, Andrew and Borgeaud, Sebastian and Alayrac, Jean-Baptiste and Doersch, Carl and Ionescu, Catalin and Ding, David and Koppula, Skanda and Zoran, Daniel and Brock, Andrew and Shelhamer, Evan and others},
+  journal={arXiv preprint arXiv:2107.14795},
+  year={2021}
 }
 @article{mcinnes2017hdbscan,
-	title        = {hdbscan: Hierarchical density based clustering.},
-	author       = {McInnes, Leland and Healy, John and Astels, Steve and others},
-	year         = 2017,
-	journal      = {J. Open Source Softw.},
-	volume       = 2,
-	number       = 11,
-	pages        = 205
+  title={hdbscan: Hierarchical density based clustering.},
+  author={McInnes, Leland and Healy, John and Astels, Steve and others},
+  journal={J. Open Source Softw.},
+  volume={2},
+  number={11},
+  pages={205},
+  year={2017}
 }
 @inproceedings{michel2023object,
-	title        = {OBJect 3DIT: Language-guided 3D-aware Image Editing},
-	author       = {Michel, Oscar and Bhattad, Anand and VanderBilt, Eli and Krishna, Ranjay and Kembhavi, Aniruddha and Gupta, Tanmay},
-	year         = 2023,
-	booktitle    = {Advances in Neural Information Processing Systems}
+  title={OBJect 3DIT: Language-guided 3D-aware Image Editing},
+  author={Michel, Oscar and Bhattad, Anand and VanderBilt, Eli and Krishna, Ranjay and Kembhavi, Aniruddha and Gupta, Tanmay},
+  booktitle={Advances in Neural Information Processing Systems},
+  year={2023}
 }
 @inproceedings{zhang2024hive,
-	title        = {Hive: Harnessing human feedback for instructional visual editing},
-	author       = {Zhang, Shu and Yang, Xinyi and Feng, Yihao and Qin, Can and Chen, Chia-Chih and Yu, Ning and Chen, Zeyuan and Wang, Huan and Savarese, Silvio and Ermon, Stefano and others},
-	year         = 2024,
-	booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-	pages        = {9026--9036}
+  title={Hive: Harnessing human feedback for instructional visual editing},
+  author={Zhang, Shu and Yang, Xinyi and Feng, Yihao and Qin, Can and Chen, Chia-Chih and Yu, Ning and Chen, Zeyuan and Wang, Huan and Savarese, Silvio and Ermon, Stefano and others},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={9026--9036},
+  year={2024}
 }
 @misc{defazio2024road,
-	title        = {The Road Less Scheduled},
-	author       = {Aaron Defazio and Xingyu Yang and Harsh Mehta and Konstantin Mishchenko and Ahmed Khaled and Ashok Cutkosky},
-	year         = 2024,
-	eprint       = {2405.15682},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.LG}
+      title={The Road Less Scheduled}, 
+      author={Aaron Defazio and Xingyu Yang and Harsh Mehta and Konstantin Mishchenko and Ahmed Khaled and Ashok Cutkosky},
+      year={2024},
+      eprint={2405.15682},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
 @misc{lin2015microsoftcococommonobjects,
-	title        = {Microsoft COCO: Common Objects in Context},
-	author       = {Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
-	year         = 2015,
-	url          = {https://arxiv.org/abs/1405.0312},
-	eprint       = {1405.0312},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.CV}
+      title={Microsoft COCO: Common Objects in Context}, 
+      author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+      year={2015},
+      eprint={1405.0312},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1405.0312}, 
 }
 @article{saharia2022photorealistic,
 	title        = {Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding},
@@ -429,41 +447,45 @@
 	pages        = {1125--1134}
 }
 @inproceedings{hertz2023delta,
-	title        = {Delta Denoising Score},
-	author       = {Hertz, Amir and Aberman, Kfir and Cohen-Or, Daniel},
-	year         = 2023,
-	booktitle    = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
-	pages        = {2328--2337}
+  title={Delta Denoising Score},
+  author={Hertz, Amir and Aberman, Kfir and Cohen-Or, Daniel},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  pages={2328--2337},
+  year={2023}
 }
+
 @inproceedings{nam2024contrastive,
-	title        = {Contrastive Denoising Score for Text-Guided Latent Diffusion Image Editing},
-	author       = {Nam, Hyelin and Lee, Jaehoon and Kim, Seungryong},
-	year         = 2024,
-	booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)}
+  title={Contrastive Denoising Score for Text-Guided Latent Diffusion Image Editing},
+  author={Nam, Hyelin and Lee, Jaehoon and Kim, Seungryong},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2024}
 }
+
 @inproceedings{wu2023latent,
-	title        = {A Latent Space of Stochastic Diffusion Models for Zero-Shot Image Editing and Guidance},
-	author       = {Wu, Chen Henry and De la Torre, Fernando},
-	year         = 2023,
-	booktitle    = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
-	pages        = {7378--7387}
+  title={A Latent Space of Stochastic Diffusion Models for Zero-Shot Image Editing and Guidance},
+  author={Wu, Chen Henry and De la Torre, Fernando},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  pages={7378--7387},
+  year={2023}
 }
-@inproceedings{Zhang_2024_CVPR,
-	title        = {Residual Learning in Diffusion Models},
-	author       = {Zhang, Junyu and Liu, Daochang and Park, Eunbyung and Zhang, Shichao and Xu, Chang},
-	year         = 2024,
-	month        = {June},
-	booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages        = {7289--7299}
+
+@InProceedings{Zhang_2024_CVPR,
+    author    = {Zhang, Junyu and Liu, Daochang and Park, Eunbyung and Zhang, Shichao and Xu, Chang},
+    title     = {Residual Learning in Diffusion Models},
+    booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month     = {June},
+    year      = {2024},
+    pages     = {7289-7299}
 }
+
 @misc{zhang2018unreasonableeffectivenessdeepfeatures,
-	title        = {The Unreasonable Effectiveness of Deep Features as a Perceptual Metric},
-	author       = {Richard Zhang and Phillip Isola and Alexei A. Efros and Eli Shechtman and Oliver Wang},
-	year         = 2018,
-	url          = {https://arxiv.org/abs/1801.03924},
-	eprint       = {1801.03924},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.CV}
+      title={The Unreasonable Effectiveness of Deep Features as a Perceptual Metric}, 
+      author={Richard Zhang and Phillip Isola and Alexei A. Efros and Eli Shechtman and Oliver Wang},
+      year={2018},
+      eprint={1801.03924},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1801.03924}, 
 }
 @inproceedings{zhu2017unpaired,
 	title        = {Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks},
@@ -549,14 +571,14 @@
 	journal      = {arXiv preprint arXiv:2112.07577}
 }
 @article{goodfellow2020generative,
-	title        = {Generative adversarial networks},
-	author       = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
-	year         = 2020,
-	journal      = {Communications of the ACM},
-	publisher    = {ACM New York, NY, USA},
-	volume       = 63,
-	number       = 11,
-	pages        = {139--144}
+  title={Generative adversarial networks},
+  author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  journal={Communications of the ACM},
+  volume={63},
+  number={11},
+  pages={139--144},
+  year={2020},
+  publisher={ACM New York, NY, USA}
 }
 @inproceedings{shen2018faceidgan,
 	title        = {FaceID-GAN: Learning a Symmetry Three-Player GAN for Identity-Preserving Face Synthesis},
@@ -565,14 +587,19 @@
 	booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 	url          = {https://openaccess.thecvf.com/content_cvpr_2018/html/Shen_FaceID-GAN_Learning_a_CVPR_2018_paper.html}
 }
-@misc{zhang2024flashfacehumanimagepersonalization,
-	title        = {FlashFace: Human Image Personalization with High-fidelity Identity Preservation},
-	author       = {Shilong Zhang and Lianghua Huang and Xi Chen and Yifei Zhang and Zhi-Fan Wu and Yutong Feng and Wei Wang and Yujun Shen and Yu Liu and Ping Luo},
-	year         = 2024,
-	url          = {https://arxiv.org/abs/2403.17008},
-	eprint       = {2403.17008},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.CV}
+@inproceedings{yin2019semantic,
+	title        = {Semantic Identity Preserving Generative Adversarial Networks for Realistic Profile Face Synthesis},
+	author       = {Yin, Guojun and Liu, Baoyuan and Li, Jian and Sun, Yu and Wang, Xiaogang and Ouyang, Wanli},
+	year         = 2019,
+	booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+	url          = {https://openaccess.thecvf.com/content_CVPR_2019/html/Yin_Semantic_Identity_Preserving_Generative_Adversarial_Networks_for_Realistic_Profile_Face_CVPR_2019_paper.html}
+}
+@article{zhang2023human,
+	title        = {Human Image Personalization with High-fidelity Identity Preservation},
+	author       = {Zhang, Jiacheng and Wu, Jie and Wu, Hefeng and Xiao, Xuefeng and Lin, Liang},
+	year         = 2023,
+	journal      = {arXiv preprint arXiv:2403.17008},
+	url          = {https://arxiv.org/html/2403.17008}
 }
 @article{lin2024dreamsalon,
 	title        = {DreamSalon: A Staged Diffusion Framework for Preserving Identity-Context in Editable Portrait Generation},
@@ -595,23 +622,19 @@
 	booktitle    = {Proceedings of Machine Learning Research},
 	url          = {https://proceedings.mlr.press/v235/nie24b.html}
 }
-@misc{mishra2024clipguided,
-      title={Image Synthesis with Graph Conditioning: CLIP-Guided Diffusion Models for Scene Graphs}, 
-      author={Rameshwar Mishra and A V Subramanyam},
-      year={2024},
-      eprint={2401.14111},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2401.14111}, 
+@article{mishra2024clipguided,
+	title        = {CLIP-Guided Scene Graph Diffusion Models for Structured Image Generation},
+	author       = {Mishra, Shravan and Subramanyam, Vidya},
+	year         = 2024,
+	journal      = {arXiv preprint arXiv:2401.14111},
+	url          = {https://arxiv.org/abs/2401.14111}
 }
-@misc{wu2024conceptmix,
-      title={ConceptMix: A Compositional Image Generation Benchmark with Controllable Difficulty}, 
-      author={Xindi Wu and Dingli Yu and Yangsibo Huang and Olga Russakovsky and Sanjeev Arora},
-      year={2024},
-      eprint={2408.14339},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2408.14339}, 
+@article{wu2024conceptmix,
+	title        = {ConceptMix: A Benchmark for Evaluating Compositional Image Generation},
+	author       = {Wu, Han and Liu, Xiang and Zhang, Wei},
+	year         = 2024,
+	journal      = {arXiv preprint arXiv:2408.14339},
+	url          = {https://arxiv.org/abs/2408.14339}
 }
 @inproceedings{popovic2023multi,
 	title        = {Spatially Multi-Conditional Image Generation},
@@ -627,14 +650,12 @@
 	journal      = {arXiv preprint arXiv:1512.00570},
 	url          = {https://arxiv.org/abs/1512.00570}
 }
-@misc{graikos2024learnedrepresentationguideddiffusionmodels,
-	title        = {Learned representation-guided diffusion models for large-image generation},
-	author       = {Alexandros Graikos and Srikar Yellapragada and Minh-Quan Le and Saarthak Kapse and Prateek Prasanna and Joel Saltz and Dimitris Samaras},
-	year         = 2024,
-	url          = {https://arxiv.org/abs/2312.07330},
-	eprint       = {2312.07330},
-	archiveprefix = {arXiv},
-	primaryclass = {cs.CV}
+@article{graikos2023largeimage,
+	title        = {Large-Image Generation with Learned Representations for Local and Global Control},
+	author       = {Graikos, Alexandros and Nikolos, Ioannis and Papakipos, Zacharias},
+	year         = 2023,
+	journal      = {arXiv preprint arXiv:2312.07330},
+	url          = {https://arxiv.org/html/2312.07330v1}
 }
 @article{han2024progressivecompositionality,
 	title        = {Progressive Compositionality in Text-to-Image Generative Models},
@@ -655,28 +676,17 @@
 	year         = 2023,
 	journal      = {arXiv preprint arXiv:2304.02643}
 }
-@misc{mast3r_arxiv24,
-      title={Grounding Image Matching in 3D with MASt3R}, 
-      author={Vincent Leroy and Yohann Cabon and Jerome Revaud},
-      year={2024},
-      eprint={2406.09756},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+@article{li2023mast3r,
+	title        = {Mast3r: Multi-agent spatio-temporal transformer for 3d motion prediction},
+	author       = {Li, Yining and Wang, Ziyu and Wang, Yilun and Wang, Xinyu and Wang, Yanfeng and Wu, Gangshan and Wang, Yizhou},
+	year         = 2023,
+	journal      = {arXiv preprint arXiv:2303.17137}
 }
-@inproceedings{dust3r_cvpr24,
-      title={DUSt3R: Geometric 3D Vision Made Easy}, 
-      author={Shuzhe Wang and Vincent Leroy and Yohann Cabon and Boris Chidlovskii and Jerome Revaud},
-      booktitle = {CVPR},
-      year = {2024}
-}
-
-@misc{dust3r_arxiv23,
-      title={DUSt3R: Geometric 3D Vision Made Easy}, 
-      author={Shuzhe Wang and Vincent Leroy and Yohann Cabon and Boris Chidlovskii and Jerome Revaud},
-      year={2023},
-      eprint={2312.14132},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+@article{li2023dust3r,
+	title        = {Dust3r: Dual spatio-temporal transformer for 3d human motion prediction},
+	author       = {Li, Yining and Wang, Ziyu and Wang, Yilun and Wang, Xinyu and Wang, Yanfeng and Wu, Gangshan and Wang, Yizhou},
+	year         = 2023,
+	journal      = {arXiv preprint arXiv:2303.17138}
 }
 @article{mildenhall2020nerf,
 	title        = {NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis},
@@ -736,6 +746,12 @@
 	author       = {Parmar, Gaurav and Park, Jong-Chyi and Zhu, Jun-Yan and Efros, Alexei A and Zhang, Richard},
 	year         = 2023,
 	journal      = {arXiv preprint arXiv:2209.12208}
+}
+@article{poole2022dreamfusion,
+	title        = {DreamFusion: Text-to-3D Using 2D Diffusion},
+	author       = {Poole, Ben and Jain, Ajay and Barron, Jonathan T and Mildenhall, Ben},
+	year         = 2022,
+	journal      = {arXiv preprint arXiv:2209.14988}
 }
 @article{liu2023zero,
 	title        = {Zero-1-to-3: Zero-Shot One Image to 3D Object},
@@ -821,10 +837,10 @@
 	volume       = 30
 }
 @article{wu2024reft,
-	title        = {Reft: Representation finetuning for language models},
-	author       = {Wu, Zhengxuan and Arora, Aryaman and Wang, Zheng and Geiger, Atticus and Jurafsky, Dan and Manning, Christopher D and Potts, Christopher},
-	year         = 2024,
-	journal      = {arXiv preprint arXiv:2404.03592}
+  title={Reft: Representation finetuning for language models},
+  author={Wu, Zhengxuan and Arora, Aryaman and Wang, Zheng and Geiger, Atticus and Jurafsky, Dan and Manning, Christopher D and Potts, Christopher},
+  journal={arXiv preprint arXiv:2404.03592},
+  year={2024}
 }
 @inproceedings{dathathri2019plug,
 	title        = {Plug and Play Language Models: A Simple Approach to Controlled Text Generation},
@@ -925,14 +941,19 @@
 	pages        = {6626--6637},
 	url          = {https://arxiv.org/abs/1706.08500}
 }
-@misc{radford2021learningtransferablevisualmodels,
-      title={Learning Transferable Visual Models From Natural Language Supervision}, 
-      author={Alec Radford and Jong Wook Kim and Chris Hallacy and Aditya Ramesh and Gabriel Goh and Sandhini Agarwal and Girish Sastry and Amanda Askell and Pamela Mishkin and Jack Clark and Gretchen Krueger and Ilya Sutskever},
-      year={2021},
-      eprint={2103.00020},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2103.00020}, 
+@inproceedings{saito2020IS,
+	title        = {Train Inception-V3 on CIFAR10},
+	author       = {Saito, Shunta and Matsumoto, Eiji and Saito, Shunta},
+	year         = 2020,
+	booktitle    = {arXiv preprint arXiv:2010.04478},
+	url          = {https://arxiv.org/abs/2010.04478}
+}
+@inproceedings{wu2021CLIPSIM,
+	title        = {CLIP: Learning Transferable Visual Models From Natural Language Supervision},
+	author       = {Wu, Yuxin and Kirillov, Alexander and Massa, Francisco and Lo, Wan-Yen and Girshick, Ross},
+	year         = 2021,
+	booktitle    = {arXiv preprint arXiv:2103.00020},
+	url          = {https://arxiv.org/abs/2103.00020}
 }
 @inproceedings{soomro2012UCF,
 	title        = {UCF101: A Dataset of 101 Human Actions Classes From Videos in The Wild},
